care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/Dataro_Upgrades_Comparison__c.object-meta.xml
<CustomObject>
    <label>Dataro Upgrade Comparison</label>
    <nameField>
        <label>Dataro Upgrade Comparison</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dataro Upgrade Comparisons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>