care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Campaign.Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>