care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/Dataro__c.field-meta.xml
<CustomField>
    <fullName>Dataro__c</fullName>
    <label>Dataro</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>