care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/DateResponded__c.field-meta.xml
<CustomField>
    <fullName>DateResponded__c</fullName>
    <label>Date.Responded</label>
    <type>Date</type>
</CustomField>