care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/DateSent__c.field-meta.xml
<CustomField>
    <fullName>DateSent__c</fullName>
    <label>Date.Sent</label>
    <type>Date</type>
</CustomField>