care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/MonthAvgIncrease__c.field-meta.xml
<CustomField>
    <fullName>MonthAvgIncrease__c</fullName>
    <label>MonthAvgIncrease</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>