care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start.Date</label>
    <type>Date</type>
</CustomField>