care-australia-uat/force-app/main/default/objects/Dataro_Upgrades_Comparison__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>DateResponded__c</columns>
    <columns>DateSent__c</columns>
    <columns>CampaignName__c</columns>
    <columns>TotalSent__c</columns>
    <columns>TotalUpgrade__c</columns>
    <columns>Dataro__c</columns>
    <columns>CampaignSuccessRate__c</columns>
    <columns>AvgSuccessRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>